// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<IdccSuggester /> should render 1`] = `
<div>
  <div
    aria-expanded="false"
    aria-haspopup="listbox"
    aria-owns="react-autowhatever-1"
    role="combobox"
    style="position: relative;"
  >
    <input
      aria-autocomplete="list"
      aria-controls="react-autowhatever-1"
      autocomplete="off"
      class="full-width"
      name="query"
      placeholder="Convention collective"
      type="search"
      value=""
    />
    <div
      class="sc-bdVaJa iCIbBI"
      id="react-autowhatever-1"
      role="listbox"
    />
  </div>
</div>
`;

exports[`<IdccSuggester /> should render suggestions 1`] = `
<div>
  <div
    aria-expanded="true"
    aria-haspopup="listbox"
    aria-owns="react-autowhatever-1"
    role="combobox"
    style="position: relative;"
  >
    <input
      aria-autocomplete="list"
      aria-controls="react-autowhatever-1"
      autocomplete="off"
      class="full-width"
      name="query"
      placeholder="Convention collective"
      type="search"
      value="test"
    />
    <div
      class="sc-bdVaJa iCIbBI"
      id="react-autowhatever-1"
      role="listbox"
      style="max-height: 300px; border: 1px solid silver; position: absolute; overflow-y: scroll; left: 0px; right: 0px; border-radius: 3px; border-top-right-radius: 0; margin-top: -3px; box-shadow: 0 5px 20px 0 rgba(0, 0, 0, 0.3);"
    >
      <ul
        role="listbox"
        style="margin: 0px; padding: 0px; background: white;"
      >
        <li
          aria-selected="false"
          data-suggestion-index="0"
          id="react-autowhatever-1--item-0"
          role="option"
        >
          <div
            class="sc-bwzfXH eLzkJV"
          >
            IDCC IDCC - item title
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;
